<resources>
    <string name="app_name">Taller_4_PDM</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="add_to_favorite">+ Guardar en especiales</string>
    <string name="text_nothing">N/A</string>
    <string name="titulo">Nombres equipos (local-visita)</string>
    <string name="caratula">Cover:</string>
    <string name="autores">Marcador Equipo local</string>
    <string name="edicion">Marcador Equipo visitante</string>
    <string name="isbn">ISBN:</string>
    <string name="editoriales">Estadio</string>
    <string name="resumen">Fecha</string>
    <string name="tag_s">Tag(s):</string>
    <string name="ingresa_los_datos">Nombres equipos</string>
    <string name="agregar">Registrar</string>
    <string name="eliminar_de_favorito">- Borrar de registro</string>
</resources>
