<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout android:layout_width="match_parent"
                  android:layout_height="wrap_content"
    android:orientation="vertical"
    android:layout_gravity="center"
    android:gravity="center">

        <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

            <TextView
                    android:id="@+id/titulof"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/titulo"
                    android:padding="@dimen/padding_tv"
                    android:textAlignment="center"
                    android:layout_margin="@dimen/margin_tv"/>

            <TextView
                    android:id="@+id/tv_title_book_activityf"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/text_nothing"
                    android:padding="@dimen/padding_tv"
                    android:textAlignment="center"
                    android:layout_margin="@dimen/margin_tv"/>
        </LinearLayout>

        <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

            <TextView
                    android:id="@+id/caratulaf"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/caratula"
                    android:padding="@dimen/padding_tv"
                    android:textAlignment="center"
                    android:layout_margin="@dimen/margin_tv"/>

            <TextView
                    android:id="@+id/tv_caratulaf"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/text_nothing"
                    android:padding="@dimen/padding_tv"
                    android:textAlignment="center"
                    android:layout_margin="@dimen/margin_tv"/>
        </LinearLayout>

        <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

            <TextView
                    android:id="@+id/autoresf"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/autores"
                    android:padding="@dimen/padding_tv"
                    android:textAlignment="center"
                    android:layout_margin="@dimen/margin_tv"/>

            <TextView
                    android:id="@+id/tv_autoresf"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/text_nothing"
                    android:padding="@dimen/padding_tv"
                    android:textAlignment="center"
                    android:layout_margin="@dimen/margin_tv"/>

        </LinearLayout>

        <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

            <TextView
                    android:id="@+id/edicionf"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/edicion"
                    android:padding="@dimen/padding_tv"
                    android:textAlignment="center"
                    android:layout_margin="@dimen/margin_tv"/>

            <TextView
                    android:id="@+id/tv_edicionf"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/text_nothing"
                    android:padding="@dimen/padding_tv"
                    android:textAlignment="center"
                    android:layout_margin="@dimen/margin_tv"/>

        </LinearLayout>

        <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

            <TextView
                    android:id="@+id/editorialesf"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/editoriales"
                    android:padding="@dimen/padding_tv"
                    android:textAlignment="center"
                    android:layout_margin="@dimen/margin_tv"/>

            <TextView
                    android:id="@+id/tv_editorialesf"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/text_nothing"
                    android:padding="@dimen/padding_tv"
                    android:textAlignment="center"
                    android:layout_margin="@dimen/margin_tv"/>

        </LinearLayout>

        <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

            <TextView
                    android:id="@+id/isbnf"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/isbn"
                    android:padding="@dimen/padding_tv"
                    android:textAlignment="center"
                    android:layout_margin="@dimen/margin_tv"/>

            <TextView
                    android:id="@+id/tv_isbnf"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/text_nothing"
                    android:padding="@dimen/padding_tv"
                    android:textAlignment="center"
                    android:layout_margin="@dimen/margin_tv"/>

        </LinearLayout>

        <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

            <TextView
                    android:id="@+id/resumenf"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/resumen"
                    android:padding="@dimen/padding_tv"
                    android:textAlignment="center"
                    android:layout_margin="@dimen/margin_tv"/>

            <TextView
                    android:id="@+id/tv_resumenf"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/text_nothing"
                    android:padding="@dimen/padding_tv"
                    android:textAlignment="center"
                    android:layout_margin="@dimen/margin_tv"/>

        </LinearLayout>

        <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

            <TextView
                    android:id="@+id/tagf"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/tag_s"
                    android:padding="@dimen/padding_tv"
                    android:textAlignment="center"
                    android:layout_margin="@dimen/margin_tv"/>

            <TextView
                    android:id="@+id/tv_tagf"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/text_nothing"
                    android:padding="@dimen/padding_tv"
                    android:textAlignment="center"
                    android:layout_margin="@dimen/margin_tv"/>

        </LinearLayout>

        <Button
                android:id="@+id/bt_agregar_favoritof"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/add_to_favorite"
                android:visibility="invisible"/>

        <Button
                android:id="@+id/bt_borrar_favoritof"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/eliminar_de_favorito"
                android:visibility="invisible"/>

    </LinearLayout>



</ScrollView>